native/ailia.h

/****************************************************************
 * ライブラリ状態定義
 **/

/**
 * \~japanese
 * @def AILIA_STATUS_SUCCESS
 * @brief 成功
 *
 * \~english
 * @def AILIA_STATUS_SUCCESS
 * @brief Successful
 */
#define AILIA_STATUS_SUCCESS (0)

/****************************************************************
 * ネットワークオブジェクトのインスタンス
 **/

struct AILIANetwork;


/****************************************************************
 * スレッド数
 **/

#define AILIA_MULTITHREAD_AUTO (0)

/****************************************************************
 * 推論実行環境自動設定
 **/

#define AILIA_ENVIRONMENT_ID_AUTO (-1)

/****************************************************************
 * 推論API
 **/

/**
 * \~japanese
 * @brief ネットワークオブジェクトを作成します。
 * @param net ネットワークオブジェクトポインタへのポインタ
 * @param env_id 計算に利用する推論実行環境のID( ailiaGetEnvironment() で取得)  \ref AILIA_ENVIRONMENT_ID_AUTO
 * にした場合は自動で選択する
 * @param num_thread スレッド数の上限(  \ref AILIA_MULTITHREAD_AUTO  にした場合は自動で設定)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   ネットワークオブジェクトを作成します。
 *   推論実行環境を自動にした場合はCPUモードになり、BLASが利用できる場合はBLASを利用します。
 *   なお、BLASを利用する場合num_threadは無視される場合があります。
 *
 * \~english
 * @brief Creates a network instance.
 * @param net A pointer to the network instance pointer
 * @param env_id The ID of the inference backend used for computation (obtained by  ailiaGetEnvironment() ). It is
 * selected automatically if  \ref AILIA_ENVIRONMENT_ID_AUTO  is specified.
 * @param num_thread The upper limit on the number of threads (It is set automatically if  \ref AILIA_MULTITHREAD_AUTO
 * is specified.)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   Creates a network instance.
 *   If the inference backend is set to automatic, CPU mode is used, while if BLAS is available, it uses BLAS.
 *   Note that if BLAS is used, num_thread may be ignored.
 */
int AILIA_API ailiaCreate(struct AILIANetwork** net, int env_id, int num_thread);


/**
 * \~japanese
 * @brief ネットワークオブジェクトを初期化します。(ファイルから読み込み)
 * @param net ネットワークオブジェクトポインタ
 * @param path prototxtファイルのパス名(MBSC or UTF16)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   ファイルから読み込み、ネットワークオブジェクトを初期化します。
 *
 * \~english
 * @brief Initializes the network instance. (Read from file)
 * @param net A network instance pointer
 * @param path The path name to the prototxt file (MBSC or UTF16)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads the network instance from a file and initializes it.
 */
int AILIA_API ailiaOpenStreamFileA(struct AILIANetwork* net, const char* path);

int AILIA_API ailiaOpenStreamFileW(struct AILIANetwork* net, const wchar_t* path);


/**
 * \~japanese
 * @brief ネットワークオブジェクトを初期化します。(ユーザ定義ファイルアクセスコールバック)
 * @param net ネットワークオブジェクトポインタ
 * @param fopen_args  \ref AILIA_USER_API_FOPEN に通知される引数ポインタ
 * @param callback ユーザ定義ファイルアクセスコールバック関数構造体
 * @param version ファイルアクセスコールバック関数構造体のバージョン( \ref AILIA_FILE_CALLBACK_VERSION )
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   ファイルから読み込み、ネットワークオブジェクトを初期化します。
 *
 * \~english
 * @brief Initializes the network instance. (User-defined file access callback)
 * @param net A network instance pointer
 * @param fopen_args An argument pointer supplied by AILIA_USER_API_FOPEN
 * @param callback A struct for the user-defined file access callback function
 * @param version The version of the struct for the file access callback function ( \ref AILIA_FILE_CALLBACK_VERSION )
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads the network instance from a file and initializes it.
 */
int AILIA_API ailiaOpenStreamEx(struct AILIANetwork* net, const void* fopen_args, ailiaFileCallback callback, int version);


/**
 * \~japanese
 * @brief ネットワークオブジェクトを初期化します。(メモリから読み込み)
 * @param net ネットワークオブジェクトポインタ
 * @param buf prototxtファイルのデータへのポインタ
 * @param buf_size prototxtファイルのデータサイズ
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   メモリから読み込み、ネットワークオブジェクトを初期化します。
 *
 * \~english
 * @brief Initializes the network instance. (Read from memory)
 * @param net A network instance pointer
 * @param buf A pointer to the data in the prototxt file
 * @param buf_size The data size of the prototxt file
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads the network instance from memory and initializes it.
 */
int AILIA_API ailiaOpenStreamMem(struct AILIANetwork* net, const void* buf, unsigned int buf_size);


/**
 * \~japanese
 * @brief ネットワークオブジェクトに重み係数を読み込みます。(ファイルから読み込み)
 * @param net ネットワークオブジェクトポインタ
 * @param path protobuf/onnxファイルのパス名(MBSC or UTF16)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   ファイルからネットワークオブジェクトに重み係数を読み込みます。
 *
 * \~english
 * @brief Reads weights into a network instance. (Read from file)
 * @param net A network instance pointer
 * @param path The path name to the protobuf/onnx file (MBSC or UTF16)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads weights into the network instance from a file.
 */
int AILIA_API ailiaOpenWeightFileA(struct AILIANetwork* net, const char* path);

int AILIA_API ailiaOpenWeightFileW(struct AILIANetwork* net, const wchar_t* path);


/**
 * \~japanese
 * @brief ネットワークオブジェクトに重み係数を読み込みます。(ユーザ定義ファイルアクセスコールバック)
 * @param net ネットワークオブジェクトポインタ
 * @param fopen_args  \ref AILIA_USER_API_FOPEN に通知される引数ポインタ
 * @param callback ユーザ定義ファイルアクセスコールバック関数構造体
 * @param version ファイルアクセスコールバック関数構造体のバージョン( \ref AILIA_FILE_CALLBACK_VERSION )
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   ファイルからネットワークオブジェクトに重み係数を読み込みます。
 *
 * \~english
 * @brief Reads weights into a network instance. (User-defined file access callback)
 * @param net A network instance pointer
 * @param fopen_args An argument pointer supplied by AILIA_USER_API_FOPEN
 * @param callback A struct for the user-defined file access callback function
 * @param version The version of the struct for the file access callback function ( \ref AILIA_FILE_CALLBACK_VERSION )
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads weights into the network instance from a file.
 */
int AILIA_API ailiaOpenWeightEx(struct AILIANetwork* net, const void* fopen_args, ailiaFileCallback callback, int version);


/**
 * \~japanese
 * @brief ネットワークオブジェクトに重み係数を読み込みます。(メモリから読み込み)
 * @param net ネットワークオブジェクトポインタ
 * @param buf protobuf/onnxファイルのデータへのポインタ
 * @param buf_size protobuf/onnxファイルのデータサイズ
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   メモリからネットワークオブジェクトに重み係数を読み込みます。
 *
 * \~english
 * @brief Reads weights into a network instance. (Read from memory)
 * @param net A network instance pointer
 * @param buf A pointer to the data in the protobuf/onnx file
 * @param buf_size The data size of the protobuf/onnx file
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function reads weights into the network instance from memory.
 */
int AILIA_API ailiaOpenWeightMem(struct AILIANetwork* net, const void* buf, unsigned int buf_size);

typedef struct _AILIAEnvironment {
	/**
	 * \~japanese
	 * 環境を識別するID( ailiaCreate() の引数に与える)
	 *
	 * \~english
	 * The ID to identify the inference backend (passed to  ailiaCreate()  as an argument)
	 */
	int id;
	/**
	 * \~japanese
	 * 環境の種別( \ref AILIA_ENVIRONMENT_TYPE_CPU  or BLAS or GPU)
	 *
	 * \~english
	 * The type of the inference backend ( \ref AILIA_ENVIRONMENT_TYPE_CPU , BLAS, or GPU)
	 */
	int type;
	/**
	 * \~japanese
	 * デバイス名(シングルトンで保持されており開放不要)(ASCII)
	 *
	 * \~english
	 * The device name. It is valid until the AILIANetwork instance is destroyed.
	 */
	const char* name;
	/**
	 * \~japanese
	 * 環境のバックエンド (AILIA_ENVIRONMENT_BACKEND_*)
	 *
	 * \~english
	 * Computational (hardware) backend enabled by this environment (AILIA_ENVIRONMENT_BACKEND_*)
	 */
	int backend;
	/**
	 * \~japanese
	 * 環境の特性などを示す(AILIA_ENVIRONMENT_PROPERTY_* の論理和)
	 *
	 * \~english
	 * Additional property (low-power etc) of the environment (Logical-OR of AILIA_ENVIRONMENT_PROPERTY_*)
	 */
	int props;
} AILIAEnvironment;


/**
 * \~japanese
 * @brief 計算環境の一覧を取得します
 * @param env 計算環境情報の格納先(AILIANetworkインスタンスを破棄するまで有効)
 * @param env_idx 計算環境情報のインデックス(0～ ailiaGetEnvironmentCount() -1)
 * @param version AILIA_ENVIRONMENT_VERSION
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 *
 * \~english
 * @brief Gets the list of computational environments.
 * @param env The storage location of the computational environment information (valid until the AILIANetwork instance
 * is destroyed)
 * @param env_idx The index of the computational environment information (0 to  ailiaGetEnvironmentCount() -1)
 * @param version AILIA_ENVIRONMENT_VERSION
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 */
int AILIA_API ailiaGetEnvironment(AILIAEnvironment** env, unsigned int env_idx, unsigned int version);