lib/ffi/ailia.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Written for the FFI article
class MathUtilsFFI {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MathUtilsFFI(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MathUtilsFFI.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// \~japanese
  /// @brief ネットワークオブジェクトを作成します。
  /// @param net ネットワークオブジェクトポインタへのポインタ
  /// @param env_id 計算に利用する推論実行環境のID( ailiaGetEnvironment() で取得)  \ref AILIA_ENVIRONMENT_ID_AUTO
  /// にした場合は自動で選択する
  /// @param num_thread スレッド数の上限(  \ref AILIA_MULTITHREAD_AUTO  にした場合は自動で設定)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ネットワークオブジェクトを作成します。
  /// 推論実行環境を自動にした場合はCPUモードになり、BLASが利用できる場合はBLASを利用します。
  /// なお、BLASを利用する場合num_threadは無視される場合があります。
  ///
  /// \~english
  /// @brief Creates a network instance.
  /// @param net A pointer to the network instance pointer
  /// @param env_id The ID of the inference backend used for computation (obtained by  ailiaGetEnvironment() ). It is
  /// selected automatically if  \ref AILIA_ENVIRONMENT_ID_AUTO  is specified.
  /// @param num_thread The upper limit on the number of threads (It is set automatically if  \ref AILIA_MULTITHREAD_AUTO
  /// is specified.)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// Creates a network instance.
  /// If the inference backend is set to automatic, CPU mode is used, while if BLAS is available, it uses BLAS.
  /// Note that if BLAS is used, num_thread may be ignored.
  int ailiaCreate(
    ffi.Pointer<ffi.Pointer<AILIANetwork>> net,
    int env_id,
    int num_thread,
  ) {
    return _ailiaCreate(
      net,
      env_id,
      num_thread,
    );
  }

  late final _ailiaCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Pointer<AILIANetwork>>, ffi.Int32,
              ffi.Int32)>>('ailiaCreate');
  late final _ailiaCreate = _ailiaCreatePtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<AILIANetwork>>, int, int)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトを初期化します。(ファイルから読み込み)
  /// @param net ネットワークオブジェクトポインタ
  /// @param path prototxtファイルのパス名(MBSC or UTF16)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ファイルから読み込み、ネットワークオブジェクトを初期化します。
  ///
  /// \~english
  /// @brief Initializes the network instance. (Read from file)
  /// @param net A network instance pointer
  /// @param path The path name to the prototxt file (MBSC or UTF16)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads the network instance from a file and initializes it.
  int ailiaOpenStreamFileA(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return _ailiaOpenStreamFileA(
      net,
      path,
    );
  }

  late final _ailiaOpenStreamFileAPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Int8>)>>('ailiaOpenStreamFileA');
  late final _ailiaOpenStreamFileA = _ailiaOpenStreamFileAPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Int8>)>();

  int ailiaOpenStreamFileW(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<wchar_t> path,
  ) {
    return _ailiaOpenStreamFileW(
      net,
      path,
    );
  }

  late final _ailiaOpenStreamFileWPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<wchar_t>)>>('ailiaOpenStreamFileW');
  late final _ailiaOpenStreamFileW = _ailiaOpenStreamFileWPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<wchar_t>)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトを初期化します。(ユーザ定義ファイルアクセスコールバック)
  /// @param net ネットワークオブジェクトポインタ
  /// @param fopen_args  \ref AILIA_USER_API_FOPEN に通知される引数ポインタ
  /// @param callback ユーザ定義ファイルアクセスコールバック関数構造体
  /// @param version ファイルアクセスコールバック関数構造体のバージョン( \ref AILIA_FILE_CALLBACK_VERSION )
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ファイルから読み込み、ネットワークオブジェクトを初期化します。
  ///
  /// \~english
  /// @brief Initializes the network instance. (User-defined file access callback)
  /// @param net A network instance pointer
  /// @param fopen_args An argument pointer supplied by AILIA_USER_API_FOPEN
  /// @param callback A struct for the user-defined file access callback function
  /// @param version The version of the struct for the file access callback function ( \ref AILIA_FILE_CALLBACK_VERSION )
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads the network instance from a file and initializes it.
  int ailiaOpenStreamEx(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> fopen_args,
    ailiaFileCallback callback,
    int version,
  ) {
    return _ailiaOpenStreamEx(
      net,
      fopen_args,
      callback,
      version,
    );
  }

  late final _ailiaOpenStreamExPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ailiaFileCallback, ffi.Int32)>>('ailiaOpenStreamEx');
  late final _ailiaOpenStreamEx = _ailiaOpenStreamExPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
          ailiaFileCallback, int)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトを初期化します。(メモリから読み込み)
  /// @param net ネットワークオブジェクトポインタ
  /// @param buf prototxtファイルのデータへのポインタ
  /// @param buf_size prototxtファイルのデータサイズ
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// メモリから読み込み、ネットワークオブジェクトを初期化します。
  ///
  /// \~english
  /// @brief Initializes the network instance. (Read from memory)
  /// @param net A network instance pointer
  /// @param buf A pointer to the data in the prototxt file
  /// @param buf_size The data size of the prototxt file
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads the network instance from memory and initializes it.
  int ailiaOpenStreamMem(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> buf,
    int buf_size,
  ) {
    return _ailiaOpenStreamMem(
      net,
      buf,
      buf_size,
    );
  }

  late final _ailiaOpenStreamMemPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('ailiaOpenStreamMem');
  late final _ailiaOpenStreamMem = _ailiaOpenStreamMemPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>, int)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトに重み係数を読み込みます。(ファイルから読み込み)
  /// @param net ネットワークオブジェクトポインタ
  /// @param path protobuf/onnxファイルのパス名(MBSC or UTF16)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ファイルからネットワークオブジェクトに重み係数を読み込みます。
  ///
  /// \~english
  /// @brief Reads weights into a network instance. (Read from file)
  /// @param net A network instance pointer
  /// @param path The path name to the protobuf/onnx file (MBSC or UTF16)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads weights into the network instance from a file.
  int ailiaOpenWeightFileA(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Int8> path,
  ) {
    return _ailiaOpenWeightFileA(
      net,
      path,
    );
  }

  late final _ailiaOpenWeightFileAPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Int8>)>>('ailiaOpenWeightFileA');
  late final _ailiaOpenWeightFileA = _ailiaOpenWeightFileAPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Int8>)>();

  int ailiaOpenWeightFileW(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<wchar_t> path,
  ) {
    return _ailiaOpenWeightFileW(
      net,
      path,
    );
  }

  late final _ailiaOpenWeightFileWPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<wchar_t>)>>('ailiaOpenWeightFileW');
  late final _ailiaOpenWeightFileW = _ailiaOpenWeightFileWPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<wchar_t>)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトに重み係数を読み込みます。(ユーザ定義ファイルアクセスコールバック)
  /// @param net ネットワークオブジェクトポインタ
  /// @param fopen_args  \ref AILIA_USER_API_FOPEN に通知される引数ポインタ
  /// @param callback ユーザ定義ファイルアクセスコールバック関数構造体
  /// @param version ファイルアクセスコールバック関数構造体のバージョン( \ref AILIA_FILE_CALLBACK_VERSION )
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ファイルからネットワークオブジェクトに重み係数を読み込みます。
  ///
  /// \~english
  /// @brief Reads weights into a network instance. (User-defined file access callback)
  /// @param net A network instance pointer
  /// @param fopen_args An argument pointer supplied by AILIA_USER_API_FOPEN
  /// @param callback A struct for the user-defined file access callback function
  /// @param version The version of the struct for the file access callback function ( \ref AILIA_FILE_CALLBACK_VERSION )
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads weights into the network instance from a file.
  int ailiaOpenWeightEx(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> fopen_args,
    ailiaFileCallback callback,
    int version,
  ) {
    return _ailiaOpenWeightEx(
      net,
      fopen_args,
      callback,
      version,
    );
  }

  late final _ailiaOpenWeightExPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ailiaFileCallback, ffi.Int32)>>('ailiaOpenWeightEx');
  late final _ailiaOpenWeightEx = _ailiaOpenWeightExPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
          ailiaFileCallback, int)>();

  /// \~japanese
  /// @brief ネットワークオブジェクトに重み係数を読み込みます。(メモリから読み込み)
  /// @param net ネットワークオブジェクトポインタ
  /// @param buf protobuf/onnxファイルのデータへのポインタ
  /// @param buf_size protobuf/onnxファイルのデータサイズ
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// メモリからネットワークオブジェクトに重み係数を読み込みます。
  ///
  /// \~english
  /// @brief Reads weights into a network instance. (Read from memory)
  /// @param net A network instance pointer
  /// @param buf A pointer to the data in the protobuf/onnx file
  /// @param buf_size The data size of the protobuf/onnx file
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This function reads weights into the network instance from memory.
  int ailiaOpenWeightMem(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> buf,
    int buf_size,
  ) {
    return _ailiaOpenWeightMem(
      net,
      buf,
      buf_size,
    );
  }

  late final _ailiaOpenWeightMemPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('ailiaOpenWeightMem');
  late final _ailiaOpenWeightMem = _ailiaOpenWeightMemPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>, int)>();
